--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
             </div>
             <div class="songinfo">
-            <img src="splaying.gif" width="60px" alt="" id="gif" ><span id="masterSongName">100 Million (Karan Aujla)</span>
+            <img src="splaying.gif" width="60px" alt="" id="gif" ><span id="masterSongName">STONER (Real Boss)</span>
             <div id="currentTimeDisplay">00:00 / 00:00</div>
         </div>
         </div>
